# rim

./: Cargo.toml  README.md  test.rs  test.txt
src/: document.rs  editor.rs  row.rs  terminal.rs
